# CapyPressCore

./: Dockerfile  Makefile  README.md  docker-compose.yml  index.html  manage.py  pyproject.toml  style.css
apps/core/: apps.py  events.py  exceptions.py  models.py  selectors.py  services.py
apps/installer/: forms.py  middleware.py  services.py  state.py  urls.py  views.py
config/settings/: base.py
